测试管理员功能，修复订单功能、菜品功能等模块的bug

--- a/src/main/resources/static/manage/adminAdd.html
+++ b/src/main/resources/static/manage/adminAdd.html
@@ -86,7 +86,7 @@
                 // 提交信息到后台
                 $.ajax({
                     type: "post",
-                    url: path + "/customer/add",
+                    url: path + "/admin/add",
                     data: {
                         adminId: adminId,
                         adminName: adminName,
