--- a/src/main/resources/static/manage/foodKindList.html
+++ b/src/main/resources/static/manage/foodKindList.html
@@ -41,8 +41,9 @@
             </div>
         </form>
     </section>
-
-
+    <blockquote class="layui-elem-quote layui-quote-nm">
+        点击菜品种类名称可直接进行修改
+    </blockquote>
 
     <table id="allFoodKinds" lay-filter="allFoodKinds"></table>
 </div>
@@ -90,7 +91,7 @@
                     width: '15%',
                 }, {
                     field: 'foodKindName',
-                    title: '菜品种类名称(可修改)',
+                    title: '菜品种类名称',
                     edit: 'text',
                     width: '15%',
                 }, {
