--- a/src/main/resources/static/manage/index.html
+++ b/src/main/resources/static/manage/index.html
@@ -48,11 +48,13 @@
                 <li class="layui-nav-item layui-this"><a href="#" data-url="welcome.html" data-title="主页" data-id="00"
                                                          class="site-demo-active" data-type="tabAdd">主页</a></li>
                 <li class="layui-nav-item">
-                    <a href="#" data-url="foodList.html" data-title="菜品相关" data-id="11"
+                    <a href="#" data-url="foodListFigure.html" data-title="菜品相关" data-id="11"
                                               class="site-demo-active" data-type="tabAdd">菜品相关</a>
                     <dl class="layui-nav-child" id="foodKindTab"> <!-- 二级菜单，并动态渲染菜品种类 -->
                         <dd><a data-url="foodKindList.html" data-title="菜品种类列表" data-id="111"
                                class="site-demo-active" data-type="tabAdd">菜品种类列表</a></dd>
+                        <dd><a data-url="foodList.html" data-title="全部菜品" data-id="112"
+                               class="site-demo-active" data-type="tabAdd">全部菜品</a></dd>
                         <!-- 动态渲染菜品类别从而查看各类别的菜品信息 -->
                     </dl>
                 </li>
@@ -76,12 +78,18 @@
                     <dl class="layui-nav-child"> <!-- 二级菜单 -->
                         <dd><a data-url="customerList.html" data-title="顾客列表" data-id="331"
                                class="site-demo-active" data-type="tabAdd">顾客列表</a></dd>
-                        <dd><a data-url="customerIsDelList.html" data-title="已删除用户回收站" data-id="332"
-                               class="site-demo-active" data-type="tabAdd">已删除用户回收站</a></dd>
+                        <dd><a data-url="customerIsDelList.html" data-title="已删除顾客回收站" data-id="332"
+                               class="site-demo-active" data-type="tabAdd">已删除顾客回收站</a></dd>
                     </dl>
 
-                <li class="layui-nav-item"><a href="#" data-url="adminList.html" data-title="管理员相关" data-id="44"
-                                              class="site-demo-active" data-type="tabAdd">管理员相关</a></li>
+                <li class="layui-nav-item">
+                <a href="javascript:;">管理员相关</a>
+                <dl class="layui-nav-child"> <!-- 二级菜单 -->
+                    <dd><a data-url="adminList.html" data-title="管理员列表" data-id="441"
+                           class="site-demo-active" data-type="tabAdd">管理员列表</a></dd>
+                    <dd><a data-url="adminIsDelList.html" data-title="已删除管理员回收站" data-id="442"
+                           class="site-demo-active" data-type="tabAdd">已删除管理员回收站</a></dd>
+                </dl>
             </ul>
         </div>
     </div>
