--- a/src/main/resources/static/manage/customerList.html
+++ b/src/main/resources/static/manage/customerList.html
@@ -40,8 +40,8 @@
         </form>
     </div>
 
-    <button class="layui-btn layui-btn-sm" id="add">添加顾客</button>
-    <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload();">
+    <button class="layui-btn" id="add">添加顾客</button>
+    <button class="layui-btn" onclick="javascript:location.reload();">
         <i class="layui-icon layui-icon-refresh-3"></i>
     </button>
     <table id="allCustomer" lay-filter="allCustomer"></table>
