--- a/src/main/resources/static/manage/orderUpdate.html
+++ b/src/main/resources/static/manage/orderUpdate.html
@@ -54,14 +54,21 @@
             <label class="layui-form-label" for="orderId">订单编号</label>
             <div class="layui-input-inline">
                 <input type="text" id="orderId" required placeholder="请输入订单编号"
-                       autocomplete="off" class="layui-input">
+                       autocomplete="off" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label must" for="orderCreateCustomer">下单顾客</label>
             <div class="layui-input-inline">
                 <input type="text" id="orderCreateCustomer" required placeholder="请输入下单顾客"
-                       autocomplete="off" class="layui-input">
+                       autocomplete="off" class="layui-input" disabled>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label must" for="orderCreateTime">下单时间</label>
+            <div class="layui-input-inline">
+                <input type="text" id="orderCreateTime" required placeholder="请输入菜品计量单位"
+                       autocomplete="off" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -70,13 +77,6 @@
                 <select name="orderConditon" id="orderConditon" lay-verify="required">
                     <option value=""></option>
                 </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label must" for="orderCreateTime">下单时间</label>
-            <div class="layui-input-inline">
-                <input type="text" id="orderCreateTime" required placeholder="请输入菜品计量单位"
-                       autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
@@ -96,7 +96,6 @@
         <div class="layui-form-item">
             <label class="layui-form-label"></label>
             <button type="button" class="layui-btn" id="submit">立即提交</button>
-            <button type="button" class="layui-btn" id="bindFile" style="opacity: 0;">立即提交</button>
         </div>
     </form>
 </div>
@@ -110,21 +109,19 @@
         const str = window.location.href;
         const orderId = str.substr(str.indexOf('=') + 1);
 
-        // 获取原来的菜品信息进行回显
+        // 获取订单信息进行回显
         $.ajax({
             type: "get",
-            url: path + "/order/getFoodById?orderId=" + orderId, // 需要带上项目名(只有上传文件的时候不需要)
+            url: path + "/order/getByOrderId?orderId=" + orderId, // 需要带上项目名(只有上传文件的时候不需要)
             dataType: "json",
             success: function (response) {
                 if (response.code == 431) {
                     const element = response.data;
-                    $('#foodName').val(element.foodName);
-                    $('#foodKindId').val(element.foodKindId);
-                    $('#foodPrice').val(element.foodPrice);
-                    $('#foodMeasurement').val(element.foodMeasurement);
-                    $('#foodIntroduce').val(element.foodIntroduce);
-                    $('#foodImg').val(element.foodImg);
-                    $('#foodImgPic').attr('src',element.foodImg);
+                    $('#orderId').val(element.orderId);
+                    $('#orderCreateCustomer').val(element.orderCreateCustomer);
+                    $('#orderCreateTime').val(element.orderCreateTime);
+                    $('#orderConditon').val(element.orderConditon);
+                    $('#orderSumPrice').val(element.orderSumPrice);
                     form.render();
                 } else {
                     layer.msg(response.msg);
